--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Currículo Portifólio" />
   <meta property="og:description" content="Portifólio de Rogério Kotsubo - Aplicação de elementos HTML" />
   <meta property="og:url" content="https://rogeriokotsubo.github.io/desafio-html/" />
-  <meta property="og:image" content="./assets/img-photopea.svg" />
+  <meta property="og:image" content="https://rogeriokotsubo.github.io/assets/img-photopea.svg" />
   <meta property="og:determiner" content="a" />
   <meta property="og:locale" content="pt_BR" /> 
 </head>
@@ -18,43 +18,47 @@
     </header>
     <main>
       <section>
-        <a href="https://github.com/rogeriokotsubo">
+        <a href="https://github.com/rogeriokotsubo" target="_blank">
           <button type="button">
               <img src="./assets/foto-perfil.svg"  width="100" height="100" alt="Foto Perfil Rogério Kotsubo" >
           </button>
         </a>
-        <a href="https://github.com/rogeriokotsubo">Rogério Kotsubo</a>
+        <a href="https://github.com/rogeriokotsubo" target="_blank">Rogério Kotsubo</a>
+        <br/>
+        <h5>Brasileiro, casado, 54 anos.</h5>
+        <h5>Graduado em Engenharia Elétrica pela UNICAMP - Universidade Estadual de Campinas</h5>
+        <h5>Aspirante a Dev pela Alpha EdTech</h5>
       </section>
-      <br /><br />
       <section>
-        <h2>Áudio</h2>
+        <br/>
+        <h2>Alguns exemplos de utilização de elementos HTML</h2>
+        <br />
+        <h3>Áudio</h3>
         <h4>O Home Falou - Maria Rita (Gonzaguinha)</h4>
         <audio controls>
           <source src="./assets/o-homem-falou.mp3" type="audio/mpeg">
         </audio>
-      <br />
       </section>
       <section>
-        <h2>Vídeo</h2>
+        <br />
+        <h3>Vídeo</h3>
         <h4>Mucuri- BA</h4>
-        <video controls type="video/mp4" width="600" height="400">
+        <video controls type="video/mp4" width="600" height="400" loop>
           <source src="./assets/video.mp4">
         </video>
-        <br />
       </section>
       <section>
-        <h2>iFrames</h2>
+        <br />
+        <h3>iFrames</h3>
         <h4>Outro servidor</h4>  
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30344.08740632056!2d-39.57737319691524!3d-18.071048937300706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xcac22affc62401%3A0x46da94dddb73ed3d!2sMucuri%2C%20BA%2C%2045930-000!5e0!3m2!1spt-BR!2sbr!4v1651692127222!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    <br/><br/>
         <h4>YouTube</h4>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xJy1Jx7XAcs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <br/><br/>
+        <h4>Exercício anterior</h4>  
+        <iframe src="https://rogeriokotsubo.github.io/module3-part9/" width="650" height="900">
+          <p>Your browser does not support iframes.</p>
+        </iframe>
       </section>  
-      <section>
-          <h2>SVG</h2>
-          <iframe src="https://rogeriokotsubo.github.io/module3-part9/" width="650" height="900">
-            <p>Your browser does not support iframes.</p>
-          </iframe>
-      </section>
     </main>
   </body>
 </html>
