chore: atualização index 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Currículo Portifólio" />
   <meta property="og:description" content="Portifólio de Rogério Kotsubo - Aplicação de elementos HTML" />
   <meta property="og:url" content="https://rogeriokotsubo.github.io/desafio-html/" />
-  <meta property="og:image" content="https://rogeriokotsubo.github.io/assets/img-photopea.svg" />
+  <meta property="og:image" content="https://rogeriokotsubo.github.io/img-photopea.png" />
   <meta property="og:determiner" content="a" />
   <meta property="og:locale" content="pt_BR" /> 
 </head>
